003/2. Keycloak/vpc/sg.tf
resource "aws_security_group" "alb" {
  name        = "${var.prefix}-keycloak-alb-sg"
  description = "ALB SG"
  vpc_id      = data.aws_vpc.vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = { Name = "${var.prefix}-keycloak-alb-sg" }
}

resource "aws_security_group" "keycloak" {
  name        = "${var.prefix}-keycloak-sg"
  description = "Keycloak EC2 SG"
  vpc_id      = data.aws_vpc.vpc.id

  ingress {
    from_port       = 8080
    to_port         = 8080
    protocol        = "tcp"
    security_groups = [aws_security_group.alb.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = { Name = "${var.prefix}-keycloak-sg" }
}
